refactor package structure and refactor code
