# src/main/java/wit/edu/inz/authentication/controller/AuthenticationController.java
@@ -1,0 +1,41 @@
+package wit.edu.inz.authentication.controller;
+
+import api.model.AuthenticationRequest;
+import api.model.AuthenticationResponse;
+import api.model.RegisterRequest;
+import api.model.WorkerCreateRequest;
+import wit.edu.inz.authentication.service.AuthenticationService;
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.web.bind.annotation.*;
+
+@RestController
+@RequiredArgsConstructor
+public class AuthenticationController {
+    private final AuthenticationService authService;
+
+    @PostMapping("/register")
+    public ResponseEntity<AuthenticationResponse> registerUser(@RequestBody RegisterRequest request){
+        return ResponseEntity
+                .status(HttpStatus.CREATED)
+                .body(authService.register(request));
+    }
+
+    @PostMapping("/login")
+    public ResponseEntity<AuthenticationResponse> loginUser(@RequestBody AuthenticationRequest request){
+        return ResponseEntity.ok(
+                authService.login(request));
+    }
+
+    @PostMapping("/workers")
+    @PreAuthorize("hasRole('ADMIN')")
+    @ResponseStatus(HttpStatus.CREATED)
+    public AuthenticationResponse createWorker(
+            @RequestBody @Valid WorkerCreateRequest request) {
+
+        return authService.createWorker(request);
+    }
+}
